fixed some alignments and added global.css

--- a/bambi-laravel/public/css/shop.css
+++ b/bambi-laravel/public/css/shop.css
@@ -83,6 +83,9 @@
   height: 1930px;
   position: relative;
   width: 1920px;
+  display: flex;
+  flex-wrap: wrap;
+
 }
 
 .shop .search {
@@ -102,8 +105,18 @@
 .shop .prod_box {
   display: flex;
   flex-wrap: wrap;
-  
+  padding: 5px;
+  margin: 5px;
 }
+
+
+article {
+  padding: 5px;
+  margin : 5px;
+
+
+}
+
 
 .shop .overlap-group {
   align-items: flex-start;
@@ -194,6 +207,7 @@
   min-height: 1930px;
   padding: 54px 0;
   position: absolute;
+  display: flex;
   top: 0;
   width: 1452px;
 }
@@ -305,7 +319,7 @@
   background-color: #ffc14d;
   box-shadow: 0px 4px 4px #00000040;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 29px;
   min-height: 375px;
   padding: 79px 136px;
